# project-manager

./: LICENSE  README.md  project-manager.cabal
src/: Main.hs  Project.hs
