name:                project-manager
version:             0.1.0.0
synopsis:            CLI project manager
description:         Keep track of various projects, see README.md for details
homepage:            https://github.com/delearyus/project-manager#readme
license:             BSD3
license-file:        LICENSE
author:              Jamie Leary
maintainer:          jmleary@willamette.edu
copyright:           2017 Jamie Leary
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pm
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Project
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       directory,
                       HaXml
